# template_project_for_development

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
