[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
markers = [
  "integration: tests requiring database",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]

ignore_missing_imports = true

show_error_codes = true
pretty = true
warn_unused_ignores = true
no_implicit_optional = true
